<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/clicker_script"
            android:text="@string/instruction_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/first_instruction"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/second_instruction"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/shoesListBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/shoesList"
            android:textColor="@android:color/white" />

    </LinearLayout>
</layout>