<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="@+id/desc_text"
            app:layout_constraintTop_toTopOf="@+id/name_label"
            app:layout_constraintBottom_toBottomOf="@+id/desc_text"
            android:background="@color/white_smoke"/>

        <TextView
            android:id="@+id/name_label"
            style="@style/shoe_label"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/size_label"
            style="@style/shoe_label"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="@+id/name_label"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <TextView
            android:id="@+id/company_label"
            style="@style/shoe_label"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_text" />

        <TextView
            android:id="@+id/desc_label"
            style="@style/shoe_label"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/company_label"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <TextView
            android:id="@+id/name_text"
            style="@style/shoe_text"
            android:text="@{shoeData.name}"
            app:layout_constraintStart_toEndOf="@+id/name_label"
            app:layout_constraintTop_toTopOf="@+id/name_label" />

        <TextView
            android:id="@+id/size_text"
            style="@style/shoe_text"
            android:text='@{shoeData.size + ""}'
            app:layout_constraintStart_toEndOf="@+id/size_label"
            app:layout_constraintTop_toTopOf="@+id/size_label" />

        <TextView
            android:id="@+id/company_text"
            style="@style/shoe_text"
            android:text="@{shoeData.company}"
            app:layout_constraintStart_toEndOf="@+id/company_label"
            app:layout_constraintTop_toTopOf="@+id/company_label" />

        <TextView
            android:id="@+id/desc_text"
            style="@style/shoe_text"
            android:layout_width="0dp"
            android:text="@{shoeData.description}"
            android:layout_marginStart="0dp"
            android:textSize="14sp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/desc_label"
            app:layout_constraintTop_toBottomOf="@+id/desc_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>